force-app/main/default/objects/ContactPointConsent/fields/Authorised_to_Change__c.field-meta.xml
<CustomField>
    <fullName>Authorised_to_Change__c</fullName>
    <label>Authorised to Change</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Authorised</fullName>
            </value>
            <value>
                <fullName>Not Authorised</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>