force-app/main/default/objects/ContactPointConsent/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contact Point Consents</relationshipLabel>
    <relationshipName>Contact_Point_Consents</relationshipName>
    <type>Lookup</type>
</CustomField>