force-app/main/default/objects/ContactPointConsent/fields/Contact_Point__c.field-meta.xml
<CustomField>
    <fullName>Contact_Point__c</fullName>
    <label>Contact Point</label>
    <length>255</length>
    <type>Text</type>
</CustomField>