force-app/main/default/objects/ContactPointConsent/fields/DataUsePurposeName__c.field-meta.xml
<CustomField>
    <fullName>DataUsePurposeName__c</fullName>
    <formula>DataUsePurpose.Name</formula>
    <label>Data Use Purpose Name</label>
    <type>Text</type>
</CustomField>