force-app/main/default/objects/ContactPointConsent/fields/EngagementChannelTypeName__c.field-meta.xml
<CustomField>
    <fullName>EngagementChannelTypeName__c</fullName>
    <formula>EngagementChannelType.Name</formula>
    <label>Engagement Channel Type Name</label>
    <type>Text</type>
</CustomField>