force-app/main/default/objects/ContactPointConsent/fields/Opted_Out__c.field-meta.xml
<CustomField>
    <fullName>Opted_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opted Out</label>
    <type>Checkbox</type>
</CustomField>