force-app/main/default/objects/ContactPointConsent/fields/Privacy_Policy__c.field-meta.xml
<CustomField>
    <fullName>Privacy_Policy__c</fullName>
    <label>Privacy Policy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agreed</fullName>
            </value>
            <value>
                <fullName>Did not agree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>