force-app/main/default/objects/ContactPointConsent/fields/Service_Account__c.field-meta.xml
<CustomField>
    <fullName>Service_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contact Point Consents</relationshipLabel>
    <relationshipName>Contact_Point_Consents</relationshipName>
    <type>Lookup</type>
</CustomField>