force-app/main/default/objects/ContactPointConsent/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF((EffectiveTo &lt;= NOW()) || (EffectiveFrom &gt; NOW()), &apos;Inactive&apos;, &apos;Active&apos;)</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>